Add delete button function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="calculator-grid">
+  <div class="main">
+    <div class="calculator">
+      <div class="calculator-grid">
         <div id="display"></div>
         <button data-clear class="span-two">CLEAR</button>
         <button data-delete class="span-two">DELETE</button>
@@ -33,6 +35,11 @@
         <button data-number>0</button>
         <button data-equals>=</button>
         <button data-operation>+</button>
+      </div>
     </div>
+  </div>
+  <footer class='footer'>
+    <p>Copyright © 2022 daramaciej</p>
+  </footer>
 </body>
 </html>
