--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Calculator</title>
   <link href="/styles.css" rel="stylesheet"> 
   <script src="script.js" defer></script>
+  <script
+  src="https://kit.fontawesome.com/4c536a6bd5.js"
+  crossorigin="anonymous"
+  ></script>
 </head>
 <body>
   <div class="main">
@@ -39,7 +43,16 @@
     </div>
   </div>
   <footer class='footer'>
-    <p>Copyright © 2022 daramaciej</p>
+    <p>
+    Copyright ©
+    <script>
+      document.write(new Date().getFullYear())
+    </script>
+    daramaciej
+    </p>
+    <a href="https://github.com/daramaciej" target="_blank">
+      <i class="fab fa-github"></i>
+    </a>
   </footer>
 </body>
 </html>
