--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
         <button data-clear class="span-two">CLEAR</button>
         <button data-delete class="span-two">DELETE</button>
 
-        <button data-number>7</button>
-        <button data-number>8</button>
-        <button data-number>9</button>
-        <button data-operation>/</button>
+        <button class="btn" data-number>7</button>
+        <button class="btn" data-number>8</button>
+        <button class="btn" data-number>9</button>
+        <button class="btn" data-operation>/</button>
 
-        <button data-number>4</button>
-        <button data-number>5</button>
-        <button data-number>6</button>
-        <button data-operation>*</button>
+        <button class="btn" data-number>4</button>
+        <button class="btn" data-number>5</button>
+        <button class="btn" data-number>6</button>
+        <button class="btn" data-operation>*</button>
 
-        <button data-number>1</button>
-        <button data-number>2</button>
-        <button data-number>3</button>
-        <button data-operation>-</button>
+        <button class="btn" data-number>1</button>
+        <button class="btn" data-number>2</button>
+        <button class="btn" data-number>3</button>
+        <button class="btn" data-operation>-</button>
 
-        <button data-number>.</button>
-        <button data-number>0</button>
-        <button data-equals>=</button>
-        <button data-operation>+</button>
+        <button class="btn" data-number>.</button>
+        <button class="btn" data-number>0</button>
+        <button class="btn" data-equals>=</button>
+        <button class="btn" data-operation>+</button>
       </div>
     </div>
   </div>
